# llm-agent

./: .gitattributes  NOTICE.md  README.md  proto_client.bat
llm-agent-prototype-server/: .gitignore  Cargo.toml  compose.yaml  self_certificate_generation.sh
llm-agent-prototype-server/.devcontainer/: devcontainer.json
llm-agent-prototype-server/docker/qdrant/: Dockerfile
llm-agent-prototype-server/docker/rust/: Dockerfile
llm-agent-prototype-server/proto/: creature.proto
llm-agent-prototype-server/src/: build.rs  certification.rs  chat_gpt_api.rs  creature.rs  error_mapping.rs  logging.rs  main.rs  rpc_context.rs  vector_db.rs
llm-agent-prototype-server/src/chat_gpt_api/: client.rs  memory.rs  specification.rs
llm-agent-prototype-server/src/creature/: my_creature.rs  talk.rs
llm-agent-prototype-server/src/vector_db/: database.rs  embeddings.rs
llm-agent-prototype-unity/: .gitignore
llm-agent-prototype-unity/Assets/: packages.config
llm-agent-prototype-unity/Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineGlobalSettings.asset
llm-agent-prototype-unity/Assets/Mochineko/LLMAgent/Creature/: CreatureClient.cs  Mochineko.LLMAgent.Creature.asmdef
llm-agent-prototype-unity/Assets/Mochineko/LLMAgent/Emotion/: EmotionController.cs  Mochineko.LLMAgent.Emotion.asmdef
llm-agent-prototype-unity/Assets/Mochineko/LLMAgent/Fonts/: NotoSansJP-Regular SDF.asset
llm-agent-prototype-unity/Assets/Mochineko/LLMAgent/Input/: Mochineko.LLMAgent.Input.asmdef  MyInputActions.cs  MyInputActions.inputactions
llm-agent-prototype-unity/Assets/Mochineko/LLMAgent/Operation/: CreatureTest.cs  CreatureTest.unity  Logging.cs  MainOperator.cs  MainScene.unity  Mochineko.LLMAgent.Operation.asmdef  NewWindowGrabber.cs
llm-agent-prototype-unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
