[package]
name = "llm-agent-prototype-server"
version = "0.1.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
license = "MIT"
description = "A prototype server for LLM Agent."
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-stream = "0.3.5"
futures = "0.3.28"
hyper = "0.14.27"
hyper-tls = "0.5.0"
prost = "0.11.9"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = { version = "0.9.2", features = ["tls"] }
tonic-reflection = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
tonic-build = "0.9.2"
